# media-server

./: METADATA.json  PLAN.md  README.md  USAGE.md  media_encoding.md  pyproject.toml  requirements.txt  run_server.py
media_server/: __init__.py  config.py  jobs.py  models.py  server.py  worker.py
media_server/static/: demo.html  embed.js  index.html  play.html  play.js  player.css  script.js  style.css
